JS fixes for editing handler; CSS fix for dialog dropdown selection

--- a/sites/hgtv/packages/HATH/February/index-@Thu Sep 08 2022-21-11-50.htm
+++ b/sites/hgtv/packages/HATH/February/index-@Thu Sep 08 2022-21-11-50.htm
@@ -1,10 +1,15 @@
 <!--
-	09-8-2022 21:6 #00000
+	09-8-2022 21:14 #00000
 --><!--
 	01-22-2013 4:00p 104672
 	/help-around-the-home-february/package/index.html
 -->
 <link href="http://web.hgtv.com/webhgtv/2013/hath/local.css" rel="stylesheet" type="text/css">
+
+
+
+
+
 
 
 
@@ -85,43 +90,27 @@
 					<script src="http://web.hgtv.com/webhgtv/js/calendar2.js">ftn.calendar(function() {ftn.calendar( {}););</script>
 					<script src="http://web.hgtv.com/webhgtv/2013/hath/february/data.js">ftn.calendar(function() {ftn.calendar( {}););</script>
 					<script>ftn.calendar(function() {ftn.calendar( {}););</script>
-				</div><div id="three-feature">
-					<ul class="clrfix">
-						<li style="position: relative; left: 0px; top: 0px;">
-							<h3></h3>
-							<a href="/hgtv/video/player/0,1000149,HGTV_32796_9341_47361-2614,00.html"><img src="http://img.hgtv.com/HGTV/2011/01/04/istock-8566525_hhcal-refrigerator_s4x3_med.jpg" alt="organize your fridge" height="120" width="160"></a>
-							<p><a href="/hgtv/video/player/0,1000149,HGTV_32796_9341_47361-2614,00.html">Plan your spring garden and organize at home.</a></p>
-						</li>
-						<li>
-							<h3>Share Your Tips</h3>
-							<a href="http://boards.hgtv.com/eve/forums/a/frm/f/4284011632" target="_blank"><img src="http://img.hgtv.com/HGTV/2011/01/15/RX-DK-HSW18901_clean-bathroom_s3x4_med.jpg" alt="tips for organizing" height="120" width="160"></a>
-							<p><a href="http://boards.hgtv.com/eve/forums/a/frm/f/4284011632" target="_blank">Give us your organizing tips and you could be mentioned on TV.</a></p>
-						</li>
-						<li class="last">
-							<h3>Beautiful Spring Bulbs</h3>
-							<a href="/gardening/spring-bulbs/pictures/index.html"><img src="http://hgtv.sndimg.com/HGTV/2010/10/27/RX-DK-HTG03801_1-purple-allium_s4x3_med.jpg" alt="planting spring bulbs" height="120" width="160"></a>
-							<p><a href="/gardening/spring-bulbs/pictures/index.html">Brighten your garden with one of these lovely flowers.</a></p>
-						</li>
-					</ul>
-				</div><div id="three-feature">
-					<ul class="clrfix">
-						<li>
-							<h3>Cottage-Style Kitchens</h3>
-							<a href="/decorating/12-cozy-cottage-kitchens/pictures/index.html"><img src="http://hgtv.sndimg.com/HGTV/2008/02/20/GH08-kitchen1_med.jpg" alt="cottage kitchens" height="120" width="160"></a>
-							<p><a href="/decorating/12-cozy-cottage-kitchens/pictures/index.html">Transform your cooking space with cozy decorating touches.</a></p>
-						</li>
-						<li>
-							<h3>Romantic Bedrooms</h3>
-							<a href="/bedrooms/10-romantic-bedrooms-from-rate-my-space/pictures/index.html"><img src="http://img.hgtv.com/HGTV/2010/12/03/RMS_bobendanna-beach-bedroom-with-gauzy-canopy_s4x3_med.jpg" alt="romantic bedrooms" height="120" width="160"></a>
-							<p><a href="/bedrooms/10-romantic-bedrooms-from-rate-my-space/pictures/index.html">Use these ideas to take your bedroom from boring to inspired.</a></p>
-						</li>
-						<li class="last">
-							<h3>Supersized Sofas</h3>
-							<a href="/decorating/stylish-oversized-sofas/pictures/index.html"><img src="http://hgtv.sndimg.com/HGTV/2010/06/04/DP_Umbert-oversized-sofa_s4x3_med.jpg" alt="large sofas" height="120" width="160"></a>
-							<p><a href="/decorating/stylish-oversized-sofas/pictures/index.html">Select stylish furnishings designed for large groups.</a></p>
-						</li>
-					</ul>
-				</div><div id="hg-we"></div><div id="hg-ww"></div><div id="hg-w-ft"></div></div>
+				</div><div class="pod two-across">
+	<style>.two-across { margin: 10px 0 14px 14px; }.two-across .bd h3{margin-bottom:14px;}</style>
+	<div class="hd"></div>
+	<div class="bd">
+		<ul class="clrfix">
+			<li class="mod2">
+				<h3><a href="#"></a></h3>
+				<a href="#"><img class="thumb" src="../sites/hgtv/images/120x90_tz.jpg"></a>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+				<p><a href="#">Did it Work?</a></p>
+			</li>
+			<li style="position: relative; left: 0px; top: 0px;">
+				<h3><a href="#">Header</a></h3>
+				<a href="#"><img class="thumb" src="../sites/hgtv/images/120x90_tz.jpg"></a>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+				<p><a href="#">Call to Action</a></p>
+			</li>
+		</ul>
+	</div>
+	<div class="ft"></div>
+</div><div id="hg-we"></div><div id="hg-ww"></div><div id="hg-w-ft"></div></div>
 			<div id="hg-e"> 
 				
 				
@@ -195,6 +184,11 @@
 		</div>
 	</div>
 </div>
+
+
+
+
+
 
 
 
