--- a/sites/hgtv/packages/New 2022/index-@Thu Sep 08 2022-21-19-30.htm
+++ b/sites/hgtv/packages/New 2022/index-@Thu Sep 08 2022-21-19-30.htm
@@ -1,5 +1,5 @@
 <!--
-	09-8-2022 21:20 #00000
+	09-8-2022 21:28 #00000
 -->
 		
 		
@@ -11,6 +11,26 @@
 	<ul class="clrfix">
 		<li><a href="#"><span>Tab 1</span></a></li>
 	<li><a href="#"><span>Tab 2</span></a></li><li class="selected"><a href="#"><span>Tab 3</span></a></li><li><a href="#"><span>Tab 4</span></a></li></ul>
+</div><div class="pod two-across">
+	<style>.two-across { margin: 10px 0 14px 14px; }.two-across .bd h3{margin-bottom:14px;}</style>
+	<div class="hd"></div>
+	<div class="bd">
+		<ul class="clrfix">
+			<li class="mod2">
+				<h3><a href="#">Header For Something Special</a></h3>
+				<a href="#"><img class="thumb" src="../sites/hgtv/images/120x90_tz.jpg"></a>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+				<p><a href="#">Did it Work?</a></p>
+			</li><li style="position: relative; left: 0px; top: 0px;">
+				<h3><a href="#">Header for something Nice</a></h3>
+				<a href="#"><img class="thumb" src="../sites/hgtv/images/120x90_tz.jpg"></a>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+				<p><a href="#">Call to Action</a></p>
+			</li>
+			
+		</ul>
+	</div>
+	<div class="ft"></div>
 </div>
 						<div id="hg-we"></div>
 						<div id="hg-ww"></div>
